--- a/package.json
+++ b/package.json
@@ -14,15 +14,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@schibstedspain/ddd-react-redux": "1.2.0",
     "prop-types": "15.5.10",
     "react": "15.5.4",
     "react-dom": "15.5.4",
-    "react-router": "2.8.1"
+    "react-helmet": "5.1.3",
+    "react-router": "2.8.1",
+    "recompose": "0.23.4"
   },
   "devDependencies": {
     "@schibstedspain/linting-rules": "1.5.0",
     "@schibstedspain/suistudio-webpack": "2.14.0"
   },
-  "eslintConfig": { "extends": ["./node_modules/@schibstedspain/linting-rules/eslintrc.js"]},
+  "eslintConfig": {
+    "extends": [
+      "./node_modules/@schibstedspain/linting-rules/eslintrc.js"
+    ]
+  },
   "sasslintConfig": "./node_modules/@schibstedspain/linting-rules/sass-lint.yml"
 }
