--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "suistudio-webpack build -C",
     "co": "npm run lint:js && git commit",
+    "deploy": "firebase deploy",
     "lint:js": "linting-rules js",
     "phoenix": "rm -Rf node_modules && npm i --cache-min=999999",
     "start": "suistudio-webpack dev"
@@ -25,6 +26,15 @@
   "devDependencies": {
     "@schibstedspain/linting-rules": "1.5.0",
     "@schibstedspain/suistudio-webpack": "2.14.0"
+  },
+  "suistudio-webpack": {
+    "vendor": [
+      "@schibstedspain/ddd-react-redux",
+      "react",
+      "react-dom",
+      "react-router",
+      "recompose"
+    ]
   },
   "eslintConfig": {
     "extends": [
