--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "license": "ISC",
   "dependencies": {
     "@schibstedspain/ddd-react-redux": "1",
+    "promise-polyfill": "6.0.2",
     "prop-types": "15.5.10",
     "react": "15.5.4",
     "react-dom": "15.5.4",
     "react-helmet": "5.1.3",
     "react-router": "2.8.1",
-    "recompose": "0.23.4"
+    "recompose": "0.23.4",
+    "unfetch": "2.1.2"
   },
   "devDependencies": {
     "@schibstedspain/linting-rules": "1",
