--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@schibstedspain/ddd-react-redux": "1",
+    "object-assign-polyfill": "0.1.0",
     "promise-polyfill": "6.0.2",
     "prop-types": "15.5.10",
     "react": "15.5.4",
