--- a/package.json
+++ b/package.json
@@ -16,20 +16,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@schibstedspain/ddd-react-redux": "1",
-    "object-assign-polyfill": "0.1.0",
-    "promise-polyfill": "6.0.2",
+    "axios": "0.16.2",
+    "babel-polyfill": "6.23.0",
     "prop-types": "15.5.10",
     "react": "15.5.4",
     "react-dom": "15.5.4",
     "react-helmet": "5.1.3",
     "react-router": "2.8.1",
-    "recompose": "0.23.4",
-    "unfetch": "2.1.2"
+    "recompose": "0.23.4"
   },
   "devDependencies": {
     "@schibstedspain/linting-rules": "1",
-    "@schibstedspain/suistudio-webpack": "2"
+    "@schibstedspain/suistudio-webpack": "3"
   },
   "suistudio-webpack": {
     "vendor": [
