--- a/firebase.json
+++ b/firebase.json
@@ -4,6 +4,13 @@
   },
   "hosting": {
     "public": "public",
+    "headers": [{
+      "source" : "/service-worker.js",
+      "headers" : [ {
+        "key" : "Cache-Control",
+        "value" : "no-cache"
+      }]
+    }],
     "rewrites": [
       {
         "source": "**",
